--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         dotnet-version: 6.0.x
       
     - name: Build
-      run: dotnet build --configuration Release
+      run: dotnet build FastEndpoints.Extensions.sln --configuration Release
       
     - name: Test
-      run: dotnet test --configuration Release --no-build --verbosity normal
+      run: dotnet test FastEndpoints.Extensions.sln --configuration Release --no-build --verbosity normal
