--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,10 +20,10 @@ jobs:
         dotnet-version: 6.0.x
       
     - name: Build
-      run: dotnet build --configuration Release
+      run: dotnet build FastEndpoints.Extensions.sln --configuration Release
       
     - name: Test
-      run: dotnet test --configuration Release --no-build --verbosity normal
+      run: dotnet test FastEndpoints.Extensions.sln --configuration Release --no-build --verbosity normal
   
   nuget:
     runs-on: windows-latest
@@ -43,5 +43,5 @@ jobs:
         
       - name: Create and push NuGet package
         run: |
-          dotnet pack -c Release -o nuget -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg
+          dotnet pack FastEndpoints.Extensions.sln -c Release -o nuget -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg
           dotnet nuget push **/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
