--- a/sample/Web/Web.csproj
+++ b/sample/Web/Web.csproj
@@ -9,11 +9,16 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FastEndpoints" Version="4.3.0" />
-        <PackageReference Include="FastEndpoints.Security" Version="4.3.0" />
-        <PackageReference Include="FluentValidation" Version="11.0.3" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.6" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
+        <PackageReference Include="FastEndpoints" Version="4.3.1" />
+        <PackageReference Include="FastEndpoints.Security" Version="4.3.1" />
+        <PackageReference Include="FluentValidation" Version="11.1.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.7" />
+        <PackageReference Include="OpenTelemetry" Version="1.3.0" />
+        <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.3.0" />
+        <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc9.4" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc9.4" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc9.4" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
     <ItemGroup>
@@ -74,6 +79,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\src\FastEndpoints.ApiExplorer\FastEndpoints.ApiExplorer.csproj" />
+      <ProjectReference Include="..\..\src\FastEndpoints.DiagnosticSources\FastEndpoints.DiagnosticSources.csproj" />
       <ProjectReference Include="..\..\src\FastEndpoints.Swagger.Swashbuckle\FastEndpoints.Swagger.Swashbuckle.csproj" />
     </ItemGroup>
 
