--- a/sample/Web/Web.csproj
+++ b/sample/Web/Web.csproj
@@ -9,9 +9,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FastEndpoints" Version="5.3.1" />
-        <PackageReference Include="FastEndpoints.Security" Version="5.3.1" />
-        <PackageReference Include="FluentValidation" Version="11.2.2" />
+        <PackageReference Include="FastEndpoints" Version="5.4.1" />
+        <PackageReference Include="FastEndpoints.Security" Version="5.4.1" />
+        <PackageReference Include="FluentValidation" Version="11.4.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.10" />
         <PackageReference Include="OpenTelemetry" Version="1.3.1" />
         <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.3.1" />
@@ -27,7 +27,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\src\FastEndpoints.ApiExplorer\FastEndpoints.ApiExplorer.csproj" />
-      <ProjectReference Include="..\..\src\FastEndpoints.DiagnosticSources\FastEndpoints.DiagnosticSources.csproj" />
+      <ProjectReference Include="..\..\src\FastEndpoints.OpenTelemetry\FastEndpoints.OpenTelemetry.csproj" />
       <ProjectReference Include="..\..\src\FastEndpoints.Swagger.Swashbuckle\FastEndpoints.Swagger.Swashbuckle.csproj" />
     </ItemGroup>
 
