--- a/src/FastEndpoints.ApiExplorer/FastEndpoints.ApiExplorer.csproj
+++ b/src/FastEndpoints.ApiExplorer/FastEndpoints.ApiExplorer.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
+        <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="FastEndpoints" Version="5.3.1" />
+      <PackageReference Include="FastEndpoints" Version="5.4.1" />
     </ItemGroup>
 
     <ItemGroup>
