--- a/src/FastEndpoints.OpenTelemetry/FastEndpoints.OpenTelemetry.csproj
+++ b/src/FastEndpoints.OpenTelemetry/FastEndpoints.OpenTelemetry.csproj
@@ -1,12 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
+        <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="FastEndpoints" Version="5.3.1" />
+      <PackageReference Include="FastEndpoints" Version="5.4.1" />
+      <PackageReference Include="OpenTelemetry" Version="1.3.1" />
+      <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="6.0.0" />
     </ItemGroup>
 
     <ItemGroup>
