--- a/src/FastEndpoints.Swagger.Swashbuckle/FastEndpoints.Swagger.Swashbuckle.csproj
+++ b/src/FastEndpoints.Swagger.Swashbuckle/FastEndpoints.Swagger.Swashbuckle.csproj
@@ -2,12 +2,12 @@
 
     <PropertyGroup>
         <ImplicitUsings>enable</ImplicitUsings>
-        <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
+        <TargetFrameworks>net6.0;net8.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="FastEndpoints" Version="5.14.0" />
-      <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
+      <PackageReference Include="FastEndpoints" />
+      <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" />
     </ItemGroup>
 
     <ItemGroup>
